--- a/source/OFXSharp/Resources.resx
+++ b/source/OFXSharp/Resources.resx
@@ -124,7 +124,7 @@
     <value>OFX/CREDITCARDMSGSRSV1/CCSTMTTRNRS/</value>
   </data>
   <data name="InsufficentFunds" xml:space="preserve">
-    <value>There are insufficent funds to pay your {item}. We have allocated what you have evenly between the {item} but there is no room in the budget for anything else, sorry...</value>
+    <value>There are insufficient funds to pay your {item}. We have allocated what you have evenly between the {item} but there is no room in the budget for anything else, sorry...</value>
   </data>
   <data name="NoFunds" xml:space="preserve">
     <value>There are no funds for your {item} sorry...</value>
